챗봇 정보 기본 레이아웃 구현

--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -130,7 +130,13 @@
         <div class="section2">
             <div class="section2_1"></div>  <!-- 중하에 시각적 블럭 영역 svg section-->
             <div class="main"> <!-- content 영역 -->
-                <div class="main_dis"></div> <!-- 챗봇 기본정보 -->
+                <div class="main_dis"><!-- 챗봇 기본정보 -->
+                    <div><h2>이음대학교</h2></div>
+                    <div class="more_button info_button">더보기</div>
+                    <div class="save_button info_button">저장</div>
+
+
+                </div>
                 <div class="main_flow"> <!-- 챗봇 플로우차트 공간 -->
                     <div class="zoom"><!-- 플로우차트 줌인줌아웃 -->
                         <div id="zoomin" onclick="zoomin()">+</div>
