--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -163,12 +163,16 @@
             </div>
         </div>
         <div class="section3" id="right_section"><!-- 웇흑에 미리보기 section-->
-            <div class="selection3_tag">
+            <div class="section3_tag">
                 <div class="select3_element section3-attribute">속성</div>
                 <div class="select3_element section3-preview">미리보기</div>
             </div>
             <input type="button" class="fold_layout" id="fold_button" onclick="fold_layout()" value=">>" >
-            <div class="attribute"></div>
+            <div class="attribute">
+                <form>
+                    <input type="textarea"></input>
+                </form>
+            </div>
             <div class="preview"></div>
             <a href="#"><div class="message">메세지</div></a>
 
