--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -195,7 +195,7 @@
                         <div id="zoomout" onclick="zoomout()">-</div>
 
                     </div>
-                    <div class="chatbot_Flow">
+                    <div class="chatbot_Flow" id="chatbot_Flow">
 
                         <div class="svg-chart" id="svg-chart" xmlns="http://www.w3.org/2000/svg" ">
                     <div class=" svg-foreign">
