--- a/Web Files/bootstrap/main.html
+++ b/Web Files/bootstrap/main.html
@@ -205,8 +205,8 @@
                             </div>
                             <div class="window templete4-body">
                                 <div class="video-name">video1</div>
-                                <div class="upload-button video-button"><video class="profile-pic" src="file://null"></div>
-                                <input class="file-upload" type="file" accept="video/*">
+                                <div class="video-button video-button"><video class="profile-pic" src="file://null"></div>
+                                <input class="video-upload" type="file" accept="video/*">
                             </div>
                         </div>
                     </div>
@@ -232,7 +232,7 @@
             </a>
 
         </div>
-    </section>
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
